start of route to patient details

--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>details</ion-title>
+    <ion-title>{{ patient.name }} Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
