--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -13,7 +13,8 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-list>
-          <ion-item *ngFor="let patient of loadedPatients">
+          <ion-item *ngFor="let patient of loadedPatients"
+          [routerLink]="['/', 'details', patient.id]" detail>
             <ion-avatar slot="start">
               <ion-img [src]="patient.imageUrl"></ion-img>
             </ion-avatar>
