--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <ion-button color="light" (click)="onLogin()">
     Login
   </ion-button>
