--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button menu="m1"></ion-menu-button>
+      <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
     <ion-title>create</ion-title>
   </ion-toolbar>
