--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-        <ion-menu-button menu="m1"></ion-menu-button>
+      <ion-menu-button menu="m1"></ion-menu-button>
         <ion-back-button defaultHref="home"></ion-back-button>
-    </ion-buttons>
-    <ion-title>patient</ion-title>
+        </ion-buttons>
+    <ion-title>Edit Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
 
 </ion-content>
