--- a/src/app/qr-scan/qr-scan.page.html
+++ b/src/app/qr-scan/qr-scan.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
         <ion-menu-button menu="m1"></ion-menu-button>
+        <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
     <ion-title>qr-scan</ion-title>
   </ion-toolbar>
