--- a/src/app/search/results/results.page.html
+++ b/src/app/search/results/results.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button menu="m1"></ion-menu-button>
+      <ion-back-button defaultHref="search"></ion-back-button>
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>results</ion-title>
