--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -2,11 +2,20 @@
   <ion-toolbar>
     <ion-buttons slot="start">
         <ion-menu-button menu="m1"></ion-menu-button>
+        <ion-back-button defaultHref="home"></ion-back-button>
       </ion-buttons>
-    <ion-title>search</ion-title>
+    <ion-title>Search</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <ion-row>
+    <ion-col size="8" size-m="6" offset="1">
+      <ion-button
+      class="ion-margin"
+      color="light"
+      >
+      Click button to scan card</ion-button>
+    </ion-col>
+  </ion-row>
 </ion-content>
