added login style and alternative button

--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button menu="m1"></ion-menu-button>
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-title>create</ion-title>
+    <ion-title>Create</ion-title>
   </ion-toolbar>
 </ion-header>
 
