--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,8 +5,27 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-button color="light" (click)="onLogin()">
-    Login
-  </ion-button>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3">
+         <ion-list>
+          <ion-item>
+            <ion-label position="floating">E-mail</ion-label>
+            <ion-input type="email"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Password</ion-label>
+            <ion-input type="passwords"></ion-input>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3">
+        <ion-button color="light" fill="outline" expand="block" >Switch to Login</ion-button>
+        <ion-button color="light" (click)="onLogin()" expand="block">Login</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
 </ion-content>
