--- a/src/app/qr-scan/qr-scan.page.html
+++ b/src/app/qr-scan/qr-scan.page.html
@@ -1,13 +1,56 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-        <ion-menu-button menu="m1"></ion-menu-button>
-        <ion-back-button defaultHref="home"></ion-back-button>
-    </ion-buttons>
-    <ion-title>qr-scan</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>
+      Ionic 4 QR Code Scanner
+    </ion-title>
   </ion-toolbar>
 </ion-header>
+ 
+<ion-content class="ion-padding">
+  <ion-item>
+    <ion-input type="text" placeholder="Name" [(ngModel)]="qrData1"></ion-input>
+    </ion-item>
+  <ion-item>
+    <ion-input type="text" placeholder="PPS Number" [(ngModel)]="qrData2"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input type="text" placeholder="Date of Birth" [(ngModel)]="qrData3"></ion-input>
+  </ion-item>
 
-<ion-content>
+  <ion-segment [(ngModel)]="elementType">
+    <ion-segment-button value="canvas">
+      <ion-label>Canvas</ion-label>
+    </ion-segment-button>
+
+    <ion-segment-button value="img">
+      <ion-label>Image</ion-label>
+    </ion-segment-button>
+
+    <ion-segment-button value="url">
+      <ion-label>URL</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <ion-button expand="full" (click)="scanCode()" color="secondary">
+    <ion-icon name="qr-scanner"></ion-icon>
+    Scan Code
+  </ion-button>
+
+  <ion-card *ngIf="qrData" class="ion-text-center">
+    <ngx-qrcode [qrc-value]="qrData1 + qrData2 + qrData3" [qrc-element-type]="elementType" qrc-class="my-code">
+    </ngx-qrcode>
+    <ion-card-content>
+      <ion-button expand="full" color="tertiary" (click)="downloadQR()" *ngIf="elementType === 'canvas'">
+        <ion-icon name="download" slot="start"></ion-icon>
+        Download QR Code
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="scannedCode">
+    <ion-card-content>
+      Result from Scan: {{ scannedCode }}
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
