--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="list"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ patient.name }}'s Details</ion-title>
+    <ion-title>{{ patient.forename }}'s Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -14,11 +14,20 @@
     </ion-avatar>
     <ion-card-content>
       <ion-card-title >
-        {{ patient.name }}
+        
       </ion-card-title>
       <ion-label>
-        <h2>PPS No: {{ patient.pps }}</h2>
+        <h2>{{ patient.forename }} {{ patient.surname }}</h2>
+        <br>
         <h2>ID No: {{ patient.id }}</h2>
+        <h2>RFID No: {{ patient.pps }}</h2>
+        <h2>Medical History: {{ patient.medicalHistory }}</h2>
+        <h2>Drug History: {{ patient.drugHistory }}</h2>
+        <br>
+        <h2>Emergency Contacts:</h2>
+        <h2>Emergency Contact 1: {{ patient.emergencyContact1 }}</h2>
+        <h2>Emergency Contact 2: {{ patient.emergencyContact2 }}</h2>
+        <h2>Emergency Contact 3: {{ patient.emergencyContact3 }}</h2>
       </ion-label>
     </ion-card-content>
   </ion-card>
