--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">     
+    <ion-buttons slot="start">
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
     <ion-title>Create New Patient</ion-title>
@@ -35,11 +35,10 @@
             ></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="floating">RFID Number</ion-label>
+            <ion-label position="floating">PPS Number</ion-label>
             <ion-input
             type="number"
             autocorrect
-            
             formControlName="pps"
             ></ion-input>
           </ion-item>
