--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -14,13 +14,12 @@
     </ion-avatar>
     <ion-card-content>
       <ion-card-title >
-        
       </ion-card-title>
       <ion-label>
         <h2>{{ patient.forename }} {{ patient.surname }}</h2>
         <br>
         <h2>ID No: {{ patient.id }}</h2>
-        <h2>RFID No: {{ patient.pps }}</h2>
+        <h2>PPS No: {{ patient.pps }}</h2>
         <h2>Medical History: {{ patient.medicalHistory }}</h2>
         <h2>Drug History: {{ patient.drugHistory }}</h2>
         <br>
