--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -12,14 +12,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
-        <div class="ion-text-center" *ngIf="isLoading">
-        <ion-spinner color="light" text-center></ion-spinner>
-        </div>
-        <div class="ion-text-center" *ngIf="!isLoading && loadedPatients.length <= 0">
-        <p>There are no patients on the list</p>
-          <ion-button color="light" routerLink="/create">Create New Patient</ion-button>
-        </div>
-          <ion-list *ngIf="!isLoading && loadedPatients.length > 0">
+        <ion-list >
           <ion-item *ngFor="let patient of loadedPatients"
           [routerLink]="['/', 'details', patient.id]" detail>
             <ion-avatar slot="start">
