--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -3,40 +3,184 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="list"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ patient.forename }}'s Details</ion-title>
+    <ion-title>{{ isLoading ? 'Loading...' : patient?.forename }}'s Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card>
-    <ion-avatar>
-      <ion-img [src]="patient.imageUrl"></ion-img>
-    </ion-avatar>
-    <ion-card-content>
-      <ion-card-title >
-      </ion-card-title>
-      <ion-label>
-        <h2>{{ patient.forename }} {{ patient.surname }}</h2>
-        <br>
-        <h2>ID No: {{ patient.id }}</h2>
-        <h2>PPS No: {{ patient.pps }}</h2>
-        <h2>Medical History: {{ patient.medicalHistory }}</h2>
-        <h2>Drug History: {{ patient.drugHistory }}</h2>
-        <br>
-        <h2>Emergency Contacts:</h2>
-        <h2>Emergency Contact 1: {{ patient.emergencyContact1 }}</h2>
-        <h2>Emergency Contact 2: {{ patient.emergencyContact2 }}</h2>
-        <h2>Emergency Contact 3: {{ patient.emergencyContact3 }}</h2>
-      </ion-label>
-    </ion-card-content>
-  </ion-card>
-
-
-  <ion-button
+  <div *ngIf="isLoading">
+    <ion-spinner color="light"></ion-spinner>
+  </div>
+  <ion-grid *ngIf="!isLoading">
+    <ion-card>
+      <ion-card-content>
+        <ion-avatar>
+          <ion-img [src]="patient.imageUrl"></ion-img>
+        </ion-avatar>
+        <ion-card-title>
+        </ion-card-title>
+        <ion-label>
+          <h2>{{ patient?.forename }} {{ patient?.surname }}</h2>
+          <br>
+          <h2>ID No: {{ patient?.id }}</h2>
+          <h2>PPS No: {{ patient?.pps }}</h2>
+          <h2>Medical History: {{ patient?.medicalHistory }}</h2>
+          <h2>Drug History: {{ patient?.drugHistory }}</h2>
+          <br>
+          <h2>Emergency Contacts:</h2>
+          <h2>Emergency Contact 1: {{ patient?.emergencyContact1 }}</h2>
+          <h2>Emergency Contact 2: {{ patient?.emergencyContact2 }}</h2>
+          <h2>Emergency Contact 3: {{ patient?.emergencyContact3 }}</h2>
+        </ion-label>
+      </ion-card-content>
+    </ion-card>
+    <ion-button
   class="ion-margin"
   color="light"
-  [routerLink]="['/', 'edit', patient.id]"
-  >Edit
+  [routerLink]="['/', 'edit', patient.id]">Edit
   </ion-button>
-
+  </ion-grid>
+  
 </ion-content>
+
+<!-- <ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+        <ion-back-button defaultHref="list"></ion-back-button>
+        </ion-buttons>
+    <ion-title>Edit Details</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onUpdateDetails()" [disabled]="!form?.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content class="ion-padding">
+  <div *ngIf="isLoading">
+    <ion-spinner class="ion-text-center" color="light"></ion-spinner>
+  </div>
+    <form [formGroup]="form" *ngIf="!isLoading">
+        <ion-grid>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+                <ion-label position="floating">Forename</ion-label>
+                <ion-input
+                type="text"
+                autocomplete
+                autocorrect
+                required
+                formControlName="forename"
+                ></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Surname</ion-label>
+                <ion-input
+                type="text"
+                autocomplete
+                autocorrect
+                required
+                formControlName="surname"
+                ></ion-input>
+                </ion-item>
+              <ion-item>
+                <ion-label position="floating">Address</ion-label>
+                <ion-input
+                type="text"
+                autocomplete
+                autocorrect
+                placeholder="Address Line 1"
+                formControlName="address"
+                ></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+                <ion-label position="floating">Date of Birth</ion-label>
+                <ion-datetime
+                min="1900-01-01"
+                formControlName="dateOfBirth"
+                ></ion-datetime>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+              <ion-label position="floating">Medical History</ion-label>
+              <ion-textarea
+              rows="3"
+              formControlName="medicalHistory"
+              ></ion-textarea>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+              <ion-label position="floating">Drug History</ion-label>
+              <ion-textarea
+              rows="3"
+              formControlName="drugHistory"
+              ></ion-textarea>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+              <ion-label position="floating">Allergies</ion-label>
+              <ion-textarea
+              rows="3"
+              formControlName="allergies"
+              ></ion-textarea>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+              <ion-label position="floating">Emergency Contact 1
+            </ion-label>
+              <ion-input
+              type="number"
+              autocomplete
+              autocorrect
+              formControlName="emergencyContact1"
+              ></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+                <ion-label position="floating">Emergency Contact 2</ion-label>
+                <ion-input
+                type="number"
+                autocomplete
+                autocorrect
+                formControlName="emergencyContact2"
+                ></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+              <ion-label position="floating">Emergency Contact 3</ion-label>
+              <ion-input
+              type="number"
+              autocomplete
+              autocorrect
+              formControlName="emergencyContact3"
+              ></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </form>
+</ion-content> -->
