--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-        <ion-back-button defaultHref="home"></ion-back-button>
+        <ion-back-button defaultHref="list"></ion-back-button>
         </ion-buttons>
     <ion-title>Edit Details</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onUpdateDetails()" [disabled]="!form.valid">
+      <ion-button (click)="onUpdateDetails()" [disabled]="!form?.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -13,7 +13,10 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-    <form [formGroup]="form">
+  <div *ngIf="isLoading">
+    <ion-spinner class="ion-text-center" color="light"></ion-spinner>
+  </div>
+    <form [formGroup]="form" *ngIf="!isLoading">
         <ion-grid>
           <ion-row>
             <ion-col size-sm="6" offset-sm="3">
@@ -44,34 +47,6 @@
                 autocomplete
                 autocorrect
                 placeholder="Address Line 1"
-                formControlName="address"
-                ></ion-input>
-                <ion-input
-                type="text"
-                autocomplete
-                autocorrect
-                placeholder="Address Line 2"
-                formControlName="address"
-                ></ion-input>
-                <ion-input
-                type="text"
-                autocomplete
-                autocorrect
-                placeholder="Town"
-                formControlName="address"
-                ></ion-input>
-                <ion-input
-                type="text"
-                autocomplete
-                autocorrect
-                placeholder="City"
-                formControlName="address"
-                ></ion-input>
-                <ion-input
-                type="text"
-                autocomplete
-                autocorrect
-                placeholder="County"
                 formControlName="address"
                 ></ion-input>
               </ion-item>
@@ -163,5 +138,4 @@
           </ion-row>
         </ion-grid>
       </form>
-
 </ion-content>
