--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -5,15 +5,24 @@
     </ion-buttons>
     <ion-title>Create New Patient</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onCreatePatient()" [disabled]="!form.valid">
+      <ion-button (click)="onCreatePatient()" [disabled]="!form.valid || !form.get('image').value">
         <ion-icon name="person-add" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <form [formGroup]="form">
     <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+            <app-image-picker
+            [showPreview]="form.get('image').value"
+            (imagePick)="onImagePicked($event)"
+            ></app-image-picker>
+        </ion-col>
+      </ion-row>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
@@ -43,7 +52,9 @@
             ></ion-input>
           </ion-item>
           <ion-item>
+            <br>
             <ion-label position="floating">Address</ion-label>
+            <br>
             <ion-input
             type="text"
             autocorrect
@@ -149,6 +160,6 @@
           </ion-item>
         </ion-col>
       </ion-row>
-    </ion-grid> 
+    </ion-grid>
   </form>
 </ion-content>
