--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -34,13 +34,22 @@
         </ion-label>
       </ion-card-content>
     </ion-card>
-    <ion-button
-  class="ion-margin"
-  color="light"
-  [routerLink]="['/', 'edit', patient.id]">Edit
-  </ion-button>
+
+    <div class="ion-text-center">
+      <ion-button
+        class="ion-margin"
+        color="light"
+        [routerLink]="['/', 'edit', patient.id]">Edit Data
+      </ion-button>
+
+      <ion-button
+        class="ion-margin"
+        color="danger"
+        [routerLink]="['/', 'patient', patient.id]">Send Data
+      </ion-button>
+    </div>
+
   </ion-grid>
-  
 </ion-content>
 
 <!-- <ion-header>
