--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -52,7 +52,7 @@
               </ion-item>
             </ion-col>
           </ion-row>
-          <ion-row>
+          <!-- <ion-row>
             <ion-col size-sm="6" offset-sm="3">
               <ion-item>
                 <ion-label position="floating">Date of Birth</ion-label>
@@ -62,7 +62,7 @@
                 ></ion-datetime>
               </ion-item>
             </ion-col>
-          </ion-row>
+          </ion-row> -->
           <ion-row>
             <ion-col size-sm="6" offset-sm="3">
               <ion-item>
