--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -4,26 +4,41 @@
         <ion-menu-button menu="m1"></ion-menu-button>
         <ion-back-button defaultHref="home"></ion-back-button>
       </ion-buttons>
-    <ion-title>Search</ion-title>
+    <ion-title>Patient Search</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <form action="">
-    <ion-grid>
-      <ion-row>
-        <ion-col size-md="6" offset-sm="3">
-          <ion-item>
-            <ion-label position="floating">RFID</ion-label>
-            <ion-input></ion-input>
-          </ion-item>
-          <ion-button
-          class="ion-margin"
-          color="light"
-          >
-          Click button to scan card</ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
+<ion-content>
+
+  <ion-searchbar placeholder="Scan Patient Card/Wearable" [(ngModel)]="searchTerm" (ionChange)="searchChanged($event)"></ion-searchbar>
+
+  <ion-item>
+    <ion-label>Select Searchtype</ion-label>
+    <ion-select [(ngModel)]="type" (ionChange)="searchChanged($event)">
+      <ion-select-option value="">All</ion-select-option>
+      <ion-select-option value="forename">Forename</ion-select-option>
+      <!-- <ion-select-option value="">Series</ion-select-option>
+      <ion-select-option value="episode">Episode</ion-select-option> -->
+    </ion-select>
+  </ion-item>
+
+  <ion-list>
+
+    <ion-item button *ngFor="let patient of (results | async)" [routerLink]="['/', 'details', patient.id]" detail>
+      <ion-avatar slot="start">
+        <img [src]="patient.imageUrl" *ngIf="patient.imageUrl != 'N/A'">
+      </ion-avatar>
+
+      <ion-label text-wrap>
+        <h3>{{ patient.forename }}</h3>
+        <p>{{ patient.id }}</p>
+      </ion-label>
+
+      <!-- <ion-icon slot="end" *ngIf="item."></ion-icon> -->
+
+    </ion-item>
+
+  </ion-list>
 </ion-content>
+
+
