--- a/src/app/patient/patient.page.html
+++ b/src/app/patient/patient.page.html
@@ -20,7 +20,7 @@
           <h2>{{ patient?.forename }} {{ patient?.surname }}</h2>
           <br>
           <h2>ID No: {{ patient?.id }}</h2>
-          <h2>PPS No: {{ patient?.pps }}</h2>
+          <h2>RFID No: {{ patient?.pps }}</h2>
           <h2>Medical History: {{ patient?.medicalHistory }}</h2>
           <h2>Drug History: {{ patient?.drugHistory }}</h2>
           <br>
