added e-triage and connected to 2nd firebase db

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
           </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle>
-            <ion-item lines="none" routerLink="/qr-scan">
-              <ion-icon name="qr-scanner" slot="start"></ion-icon>
-              <ion-label>Scan Patient QR Code</ion-label>
+            <ion-item lines="none" routerLink="/e-triage">
+              <ion-icon name="medical" slot="start"></ion-icon>
+              <ion-label>E-Triage List</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle>
@@ -31,7 +31,7 @@
           <ion-menu-toggle>
           <ion-item lines="none" routerLink="/list">
             <ion-icon name="list" slot="start"></ion-icon>
-            <ion-label>Full List</ion-label>
+            <ion-label>Full Patients List</ion-label>
           </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle>
