--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -79,3 +79,11 @@
   --ion-toolbar-color: var(--ion-color-light-tint);
 
 }
+
+ion-content {
+  --background: none;
+  background-image: url(../assets/images/Logo.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 70%;
+}
