--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -14,7 +14,7 @@
   <ion-grid *ngIf="!isLoading">
     <ion-card>
       <ion-card-content>
-        <h2>RFID No: {{ patient?.pps }}</h2>
+        <h2>RFID No: {{ patient?.rfid }}</h2>
         <br>
         <ion-avatar>
           <ion-img [src]="patient.imageUrl"></ion-img>
