--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -44,11 +44,11 @@
             ></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="floating">PPS Number</ion-label>
+            <ion-label position="floating">RFID Number</ion-label>
             <ion-input
             type="number"
             autocorrect
-            formControlName="pps"
+            formControlName="rfid"
             ></ion-input>
           </ion-item>
           <ion-item>
