--- a/src/app/e-triage-details/e-triage-details.page.html
+++ b/src/app/e-triage-details/e-triage-details.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="list"></ion-back-button>
+      <ion-back-button defaultHref="e-triage"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ isLoading ? 'Loading...' : patient?.forename }}'s Triage Details</ion-title>
   </ion-toolbar>
@@ -12,38 +12,48 @@
     <ion-spinner color="light"></ion-spinner>
   </div>
   <ion-grid *ngIf="!isLoading">
-    <ion-card>
-      <ion-card-content>
-        <h2>RFID No: {{ patient?.pps }}</h2>
+    <ion-row>
+      <ion-col>
+        <ion-img class="patient-image" [src]="patient.imageUrl"></ion-img>
+      </ion-col>
+    </ion-row>
+
+  <ion-card>
+    <ion-card-content>
+      <h1>{{ patient?.forename }} {{ patient?.surname }}</h1>
+      <br>
+      <ion-card-title>
+      </ion-card-title>
+      <ion-label>
+        <h2>RFID No: {{ patient?.rfid }}</h2>
         <br>
-        <ion-avatar>
-          <ion-img [src]="patient.imageUrl"></ion-img>
-        </ion-avatar>
+        <h2>ID No:</h2>
+        <p>{{ patient?.id }}</p>
         <br>
-        <ion-card-title>
-        </ion-card-title>
-        <ion-label>
-          <h2>{{ patient?.forename }} {{ patient?.surname }}</h2>
-          <br>
-          <h2>ID No:</h2>
-          <p>{{ patient?.id }}</p>
-          <br>
-          <h2>EIRCODE:</h2>
-          <p>{{ patient.address }}</p>
-          <br>
-          <h2>Medical History:</h2>
-          <p>{{ patient?.medicalHistory }}</p>
-          <br>
-          <h2>Drug History:</h2>
-          <p>{{ patient?.drugHistory }}</p>
-          <br>
-          <h2>Emergency Contacts:</h2>
-          <h2>Emergency Contact 1: {{ patient?.emergencyContact1 }}</h2>
-          <h2>Emergency Contact 2: {{ patient?.emergencyContact2 }}</h2>
-          <h2>Emergency Contact 3: {{ patient?.emergencyContact3 }}</h2>
-        </ion-label>
-      </ion-card-content>
-    </ion-card>
+        <h2>EIRCODE:</h2>
+        <p>{{ patient.address }}</p>
+        <br>
+        <h2>Medical History:</h2>
+        <p>{{ patient?.medicalHistory }}</p>
+        <br>
+        <h2>Drug History:</h2>
+        <p>{{ patient?.drugHistory }}</p>
+        <br>
+        <h2>Emergency Contacts:</h2>
+        <h2>Emergency Contact 1: {{ patient?.emergencyContact1 }}</h2>
+        <h2>Emergency Contact 2: {{ patient?.emergencyContact2 }}</h2>
+        <h2>Emergency Contact 3: {{ patient?.emergencyContact3 }}</h2>
+      </ion-label>
+    </ion-card-content>
+  </ion-card>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <h2 class="ion-text-center">Patient was found/or is being transported from</h2>
+        <p>{{ patient?.locationFound.address }}</p>
+        <ion-img class="location-image" [src]="patient.locationFound.staticMapImageUrl"></ion-img>
+      </ion-col>
+    </ion-row>
 
     <div class="ion-text-center">
       <ion-button
@@ -53,7 +63,6 @@
         >Triage Complete
       </ion-button>
     </div>
-
   </ion-grid>
 </ion-content>
 
@@ -198,3 +207,5 @@
         </ion-grid>
       </form>
 </ion-content> -->
+
+
