--- a/src/app/patient/patient.page.html
+++ b/src/app/patient/patient.page.html
@@ -18,6 +18,10 @@
   </div>
     <form [formGroup]="form" *ngIf="!isLoading">
         <ion-grid>
+        <ion-avatar>
+          <ion-img [src]="patient.imageUrl"></ion-img>
+        </ion-avatar>
+        <br>
           <ion-row>
             <ion-col size-sm="6" offset-sm="3">
               <ion-item>
@@ -134,6 +138,11 @@
               formControlName="emergencyContact3"
               ></ion-input>
               </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row padding>
+            <ion-col size-sm="6" offset-sm="3">
+              <app-location-pickers (locationPick)="onLocationPicked($event)"></app-location-pickers>
             </ion-col>
           </ion-row>
         </ion-grid>
