--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -8,37 +8,56 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content >
+  <!-- Search Bar -->
+  <ion-searchbar placeholder="Scan RFID Device/Accessory" [(ngModel)]="term" animated="true"></ion-searchbar>
+ 
+  <!-- List Items -->
+  <!-- <ion-list>
+    <ion-item *ngFor="let item of filterData | filter:term">
+      <ion-label>{{item.forename}} {{item.surname}}</ion-label>
+      <p>RFID: {{item.rfid}}</p>
+    </ion-item>
+  </ion-list> -->
 
-  <ion-searchbar placeholder="Scan Patient Card/Wearable" [(ngModel)]="searchTerm" (ionChange)="searchChanged($event)"></ion-searchbar>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2">
+        <ion-list >
+          <ion-item *ngFor="let item of filterData | filter:term" detail>
+            <ion-avatar slot="start">
+              <ion-img [src]="item.imageUrl"></ion-img>
+            </ion-avatar>
+              <ion-label>
+                <h2>{{ item.forename }} {{ item.surname }}</h2>
+                <p>Patient RFID: {{ item.rfid }}</p>
+              </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
 
+
+
+
+
+
+<!-- <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="searchChanged($event)"></ion-searchbar>
   <ion-item>
     <ion-label>Select Searchtype</ion-label>
     <ion-select [(ngModel)]="type" (ionChange)="searchChanged($event)">
       <ion-select-option value="">All</ion-select-option>
-      <ion-select-option value="forename">Forename</ion-select-option>
-      <!-- <ion-select-option value="">Series</ion-select-option>
-      <ion-select-option value="episode">Episode</ion-select-option> -->
+      <ion-select-option value="surname">Surname</ion-select-option>
     </ion-select>
   </ion-item>
 
   <ion-list>
-
-    <ion-item button *ngFor="let patient of (results | async)" [routerLink]="['/', 'details', patient.id]" detail>
-      <ion-avatar slot="start">
-        <img [src]="patient.imageUrl" *ngIf="patient.imageUrl != 'N/A'">
-      </ion-avatar>
-
-      <ion-label text-wrap>
-        <h3>{{ patient.forename }}</h3>
-        <p>{{ patient.id }}</p>
-      </ion-label>
-
-      <!-- <ion-icon slot="end" *ngIf="item."></ion-icon> -->
-
+    <ion-item *ngFor="let item of (results | async)">
+      {{item.surname}}
+      <br>
     </ion-item>
-
-  </ion-list>
-</ion-content>
+  </ion-list> -->
 
 
