--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,7 +82,7 @@
 
 ion-content {
   --background: none;
-  background-image: url(../assets/images/Logo.png);
+  //background-image: url(../assets/images/Logo.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 70%;
