--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -48,29 +48,17 @@
             <ion-input
             type="number"
             autocorrect
-            formControlName="rfid"
+            formControlName="rfidNumber"
             ></ion-input>
           </ion-item>
           <ion-item>
             <br>
-            <ion-label position="floating">Address</ion-label>
+            <ion-label position="floating">EIRCODE</ion-label>
             <br>
             <ion-input
             type="text"
             autocorrect
-            placeholder="Address Line 1"
-            formControlName="address"
-            ></ion-input>
-            <ion-input
-            type="text"
-            autocorrect
-            placeholder="Address Line 2"
-            formControlName="address"
-            ></ion-input>
-            <ion-input
-            type="text"
-            autocorrect
-            placeholder="City"
+            placeholder="Eircode"
             formControlName="address"
             ></ion-input>
           </ion-item>
@@ -144,19 +132,6 @@
             autocorrect
             formControlName="emergencyContact2"
             ></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-item>
-          <ion-label position="floating">Emergency Contact 3</ion-label>
-          <ion-input
-          type="number"
-          autocomplete
-          autocorrect
-          formControlName="emergencyContact3"
-          ></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
