--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -126,12 +126,12 @@
           <ion-row>
             <ion-col size-sm="6" offset-sm="3">
               <ion-item>
-              <ion-label position="floating">Emergency Contact 3</ion-label>
+              <ion-label position="floating">RFID Number</ion-label>
               <ion-input
               type="number"
               autocomplete
               autocorrect
-              formControlName="emergencyContact3"
+              formControlName="rfidNumber"
               ></ion-input>
               </ion-item>
             </ion-col>
