--- a/src/app/patient/patient.page.html
+++ b/src/app/patient/patient.page.html
@@ -45,7 +45,7 @@
                 ></ion-input>
                 </ion-item>
               <ion-item>
-                <ion-label position="floating">Address</ion-label>
+                <ion-label position="floating">EIRCODE</ion-label>
                 <ion-input
                 type="text"
                 autocomplete
@@ -130,12 +130,12 @@
           <ion-row>
             <ion-col size-sm="6" offset-sm="3">
               <ion-item>
-              <ion-label position="floating">Emergency Contact 3</ion-label>
+              <ion-label position="floating">RFID Number</ion-label>
               <ion-input
               type="number"
               autocomplete
               autocorrect
-              formControlName="emergencyContact3"
+              formControlName="rfidNumber"
               ></ion-input>
               </ion-item>
             </ion-col>
