--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,13 +13,13 @@
           <ion-menu-toggle>
           <ion-item lines="none" routerLink="/search">
             <ion-icon name="card" slot="start"></ion-icon>
-            <ion-label>Scan Patient Card</ion-label>
+            <ion-label>Scan Patient RFID</ion-label>
           </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle>
             <ion-item lines="none" routerLink="/e-triage">
               <ion-icon name="medical" slot="start"></ion-icon>
-              <ion-label>E-Triage List</ion-label>
+              <ion-label>e-Triage List</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle>
