--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" class="background">
   <!-- add reference value to the form, here form is stored in #f-->
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <ion-grid>
