--- a/src/app/e-triage-details/e-triage-details.page.scss
+++ b/src/app/e-triage-details/e-triage-details.page.scss
@@ -10,3 +10,7 @@
     max-height: 30vh;
     object-fit: cover;
 }
+
+ion-content.background{
+    --background: url(/assets/images/Medi-Comm2.png)   no-repeat 100% 100%;
+}
