--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -8,7 +8,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content class="ion-padding" class="background">
   <!-- Search Bar -->
   <ion-searchbar placeholder="Scan RFID Device/Accessory" [(ngModel)]="term" animated="true"></ion-searchbar>
  
