--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -7,17 +7,18 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" class="background">
   <div *ngIf="isLoading">
     <ion-spinner color="light"></ion-spinner>
   </div>
   <ion-grid *ngIf="!isLoading">
+    <ion-row>
+      <ion-col>
+        <ion-img class="patient-image" [src]="patient.imageUrl"></ion-img>
+      </ion-col>
+    </ion-row>
     <ion-card>
       <ion-card-content>
-        <ion-avatar>
-          <ion-img [src]="patient.imageUrl"></ion-img>
-        </ion-avatar>
-        <br>
         <ion-card-title>
         </ion-card-title>
         <ion-label>
@@ -38,6 +39,9 @@
           <br>
           <h2>Drug History:</h2>
           <p>{{ patient?.drugHistory }}</p>
+          <br>
+          <h2>Surgery History:</h2>
+          <p>{{ patient?.surgeryHistory }}</p>
           <br>
           <h2>Allergies:</h2>
           <p>{{ patient?.allergies }}</p>
