--- a/src/app/e-triage/e-triage.page.html
+++ b/src/app/e-triage/e-triage.page.html
@@ -4,11 +4,14 @@
         <!-- <ion-menu-button menu="m1"></ion-menu-button> -->
         <ion-back-button defaultHref="home"></ion-back-button>
       </ion-buttons>
-    <ion-title>Triage List</ion-title>
+    <ion-title>e-Triage List</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" class="background">
+  <div *ngIf="isLoading">
+    <ion-spinner class="ion-text-center" color="light"></ion-spinner>
+  </div>
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
@@ -21,6 +24,7 @@
             <ion-label>
               <h2>{{ patient.forename }} {{ patient.surname }}</h2>
               <p>Patient ID: {{ patient.id }}</p>
+              <p>Hospital Destination: {{patient.hospital}} Hospital</p>
             </ion-label>
           </ion-item>
         </ion-list>
