--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -12,7 +12,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" class="background">
   <div *ngIf="isLoading">
     <ion-spinner class="ion-text-center" color="light"></ion-spinner>
   </div>
@@ -88,6 +88,17 @@
           <ion-row>
             <ion-col size-sm="6" offset-sm="3">
               <ion-item>
+              <ion-label position="floating">Surgery History</ion-label>
+              <ion-textarea
+              rows="3"
+              formControlName="surgeryHistory"
+              ></ion-textarea>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
               <ion-label position="floating">Allergies</ion-label>
               <ion-textarea
               rows="3"
@@ -136,6 +147,14 @@
               </ion-item>
             </ion-col>
           </ion-row>
+          <div class="ion-text-center">
+            <ion-button
+              class="ion-margin"
+              color="danger"
+              (click)="onDelete(patient.id)"
+              >Delete Patient
+            </ion-button>
+          </div>
         </ion-grid>
       </form>
 </ion-content>
