--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -8,7 +8,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" class="background">
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
