--- a/src/app/patient/patient.page.html
+++ b/src/app/patient/patient.page.html
@@ -12,7 +12,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" class="background">
   <div *ngIf="isLoading">
     <ion-spinner class="ion-text-center" color="light"></ion-spinner>
   </div>
@@ -92,6 +92,17 @@
           <ion-row>
             <ion-col size-sm="6" offset-sm="3">
               <ion-item>
+              <ion-label position="floating">Surgery History</ion-label>
+              <ion-textarea
+              rows="3"
+              formControlName="surgeryHistory"
+              ></ion-textarea>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
               <ion-label position="floating">Allergies</ion-label>
               <ion-textarea
               rows="3"
@@ -136,6 +147,19 @@
               autocomplete
               autocorrect
               formControlName="rfidNumber"
+              ></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-item>
+              <ion-label position="floating">Hospital Destination</ion-label>
+              <ion-input
+              type="string"
+              autocomplete
+              autocorrect
+              formControlName="hospital"
               ></ion-input>
               </ion-item>
             </ion-col>
