--- a/src/app/patient/patient.page.scss
+++ b/src/app/patient/patient.page.scss
@@ -1,3 +1,7 @@
 .item-select select, .item-select select option {
     left: 75%;
 }
+
+ion-content.background{
+    --background: url(/assets/images/Medi-Comm2.png)   no-repeat 100% 100%;
+}
