--- a/src/app/qr-scan/qr-scan.page.html
+++ b/src/app/qr-scan/qr-scan.page.html
@@ -1,3 +1,13 @@
+
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+this page will be availed of in future progress
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+
+
+
+
+
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
